--- a/PowerfulRatesAPI/PowerfulRatesWebAPI/PowerfulRatesWebAPI.csproj
+++ b/PowerfulRatesAPI/PowerfulRatesWebAPI/PowerfulRatesWebAPI.csproj
@@ -9,6 +9,10 @@
     <PackageReference Include="MassTransit.AspNetCore" Version="7.1.8" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.1.8" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.1.8" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.1.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.1.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.1.3" />
   </ItemGroup>
 
 </Project>
