--- a/PowerfulRatesAPI/PowerfulRatesWebAPI/PowerfulRatesWebAPI.csproj
+++ b/PowerfulRatesAPI/PowerfulRatesWebAPI/PowerfulRatesWebAPI.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\OneDrive\Repo\powerful-rates-api\PowerfulRatesAPI\PowerfulRatesWebAPI\PowerfulRatesWebAPI.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="7.1.8" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.1.8" />
