--- a/PowerfulRatesAPI/PowerfulRatesWebAPI/PowerfulRatesWebAPI.csproj
+++ b/PowerfulRatesAPI/PowerfulRatesWebAPI/PowerfulRatesWebAPI.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="MassTransit.AspNetCore" Version="7.1.8" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.1.8" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.1.8" />
+    <PackageReference Include="Quartz" Version="3.3.2" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.3" />
