--- a/PowerfulRatesAPI/PowerfulRatesAPI/PowerfulRatesAPI.csproj
+++ b/PowerfulRatesAPI/PowerfulRatesAPI/PowerfulRatesAPI.csproj
@@ -9,6 +9,8 @@
     <PackageReference Include="MassTransit" Version="7.1.9-develop.60" />
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.1.9-develop.60" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.1.9-develop.60" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0-preview.1.21102.12" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0-preview.1.21102.12" />
     <PackageReference Include="RestSharp" Version="106.11.8-alpha.0.12" />
   </ItemGroup>
 
