--- a/PowerfulRatesAPI/PowerfulRatesAPI/appsettings.json
+++ b/PowerfulRatesAPI/PowerfulRatesAPI/appsettings.json
@@ -10,5 +10,6 @@
     "Host": "localhost",
     "Login": "guest",
     "Password": "guest",
-    "CurrencyRatesSource": "http://api.currencylayer.com/live?access_key=e4f2e8790e61ca39430fd98df8bd299b"
+  "CurrencyRatesSource": "http://api.currencylayer.com/live?access_key=e4f2e8790e61ca39430fd98df8bd299b",
+    "Interval":  5400000
 }
