--- a/PowerfulRatesAPI/PowerfulRatesAPI/PowerfulRatesAPI.csproj
+++ b/PowerfulRatesAPI/PowerfulRatesAPI/PowerfulRatesAPI.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="RestSharp" Version="106.11.8-alpha.0.12" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
