Add new currency rates source (Stas edition)

--- a/PowerfulRatesAPI/PowerfulRatesAPI/appsettings.json
+++ b/PowerfulRatesAPI/PowerfulRatesAPI/appsettings.json
@@ -10,6 +10,6 @@
   "Host": "localhost",
   "Login": "guest",
   "Password": "guest",
-  "CurrencyRatesSource": "http://api.currencylayer.com/live?access_key=0aa42cf25985e6030161d4f2e1d7311f",
+  "CurrencyRatesSource": "https://fxmarketapi.com/apilive?api_key=a4BJ5-zEfRk8-hlNa2aC&currency=USDEUR,USDJPY,USDRUB",
   "Interval": 5400000
 }
