environment variables added

--- a/PowerfulRatesAPI/PowerfulRatesAPI/appsettings.json
+++ b/PowerfulRatesAPI/PowerfulRatesAPI/appsettings.json
@@ -6,10 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "Host": "localhost",
-  "Login": "guest",
-  "Password": "guest",
-  "CurrencyRatesSource": "https://fxmarketapi.com/apilive?api_key=a4BJ5-zEfRk8-hlNa2aC&currency=USDEUR,USDJPY,USDRUB",
-  "Interval": 5400000
+  "AllowedHosts": "*"
 }
